--- a/Atoll.TransferService.Bundle/Atoll.TransferService.Bundle.csproj
+++ b/Atoll.TransferService.Bundle/Atoll.TransferService.Bundle.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Corallite">
       <HintPath>..\Lib\netstandard2.0\Corallite.dll</HintPath>
     </Reference>
